crates/cli/tests/snapshots/propose_create_snapshots__propose_create_change_already_exists.snap
---
source: crates/cli/tests/propose_create_snapshots.rs
expression: pretty(&stdout)
---
{
  "data": null,
  "error": {
    "code": "change.already_exists",
    "details": {},
    "message": "provider error: change 'demo' already exists"
  },
  "ok": false,
  "requestId": "req_00000000000000000000000000000000",
  "warnings": []
}
