crates/cli/tests/snapshots/propose_create_snapshots__propose_create_fallback_warning.snap
---
source: crates/cli/tests/propose_create_snapshots.rs
expression: pretty(&stdout)
---
{
  "data": {
    "artifactPath": ".speclink/changes/demo/proposal.md",
    "changeId": "demo",
    "mode": "local",
    "state": "proposed"
  },
  "error": null,
  "ok": true,
  "requestId": "req_00000000000000000000000000000000",
  "warnings": [
    {
      "code": "provider.not_authenticated",
      "message": "Provider 'acme' is configured but not authenticated. Using local provider fallback."
    }
  ]
}
